altre modifiche + inserisci relazioni

--- a/iniziaStudenti.html
+++ b/iniziaStudenti.html
@@ -11,9 +11,9 @@
       <span id="logo2">Portale<br>dei tirocini<br>d'azienda</span>
     </header>
     <div class="contenuto-centrato" id="inizia">
-      <h2>Chi sei?</h2>
-      <button><a href="iniziaStudenti.html">Studente</a></button>
-      <button><a href="nuovoAzienda.php">Azienda</a></button>
+      <h2>Cosa devi fare?</h2>
+      <button><a href="nuovoStudente.php">Registra tirocinio</a></button>
+      <button><a href="nuovoRelazione.php">Aggiungi relazione</a></button>
     </div>
   </body>
 </html>
