--- a/iniziaStudenti.html
+++ b/iniziaStudenti.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="it" dir="ltr">
-  <head>
+
+<head>
     <title>Inizia</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-  </head>
-  <body>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
+<body>
     <header>
-      <span id="logo1">Università<br>degli studi<br>di Udine</span>
-      <span id="logo2">Portale<br>dei tirocini<br>d'azienda</span>
+        <span id="logo1">Università<br>degli studi<br>di Udine</span>
+        <span id="logo2">Portale<br>dei tirocini<br>d'azienda</span>
     </header>
     <div class="contenuto-centrato" id="inizia">
-      <h2>Cosa devi fare?</h2>
-      <button><a href="nuovoStudente.php">Registra tirocinio</a></button>
-      <button><a href="nuovoRelazione.php">Aggiungi relazione</a></button>
+        <h2 class="titolo_inizia">Cosa devi fare?</h2>
+        <a class="bottone" href="nuovoStudente.php">Registra tirocinio</a>
+        <a class="bottone" href="nuovoRelazione.php">Aggiungi relazione</a>
     </div>
-  </body>
+</body>
+
 </html>
