--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="it" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Portale dei tirocini d'azienda — Uniud</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <div id="logo1">
-        Università<br>degli studi<br>di Udine
-      </div>
+        <div id="logo1">
+            Università<br>degli studi<br>di Udine
+        </div>
     </header>
     <div id="home">
-      <div id="home-title">
-        <h1>Portale tirocini</h1>
-        <button href="inizia.html"><a href="inizia.html">Inizia</a></button>
-        <a href="scopri.html">Scopri</a>
-      </div>
-      <img src="img/undraw_team_work_k80m.svg">
+        <div id="home-title">
+            <h1>Portale tirocini</h1>
+            <a class="bottone" href="inizia.html">Inizia</a>
+            <a href="scopri.html" style="margin-left: 20px;">Scopri</a>
+        </div>
+        <img src="img/undraw_team_work_k80m.svg">
     </div>
-  </body>
+</body>
+
 </html>
