aggiorna relazioni completato
aggiorna relazioni completato. ci sono dei bug su aggiornaAziende.php. non riesco ad inserire nuove aziende

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 <body>
     <header>
-        <div id="logo1">
-            Università<br>degli studi<br>di Udine
-        </div>
+        <span id="logo1">Università<br>degli studi<br>di Udine</span>
     </header>
     <div id="home">
         <div id="home-title">
