--- a/iniziaStudenti.html
+++ b/iniziaStudenti.html
@@ -13,7 +13,7 @@
         <span id="logo2">Portale<br>dei tirocini<br>d'azienda</span>
     </header>
     <div class="contenuto-centrato" id="inizia">
-        <h2 class="titolo_inizia">Cosa devi fare?</h2>
+        <h2>Cosa devi fare?</h2>
         <a class="bottone" href="nuovoStudente.php">Registra tirocinio</a>
         <a class="bottone" href="nuovoRelazione.php">Aggiungi relazione</a>
     </div>
