--- a/inizia.html
+++ b/inizia.html
@@ -13,7 +13,7 @@
         <span id="logo2">Portale<br>dei tirocini<br>d'azienda</span>
     </header>
     <div class="contenuto-centrato" id="inizia">
-        <h2 class="titolo_inizia">Chi sei?</h2>
+        <h2>Chi sei?</h2>
         <a class="bottone" href="iniziaStudenti.html">Studente</a>
         <a class="bottone" href="nuovoAzienda.php">Azienda</a>
     </div>
