--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="home-title">
             <h1>Portale tirocini</h1>
             <a class="bottone" href="inizia.html">Inizia</a>
-            <a href="scopri.html" style="margin-left: 20px;">Scopri</a>
+            <a href="scopri.php" style="margin-left: 20px;">Scopri</a>
         </div>
         <img src="img/undraw_team_work_k80m.svg">
     </div>
