--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <a class="bottone" href="inizia.html">Inizia</a>
             <a href="scopri.php" style="margin-left: 20px;">Scopri</a>
         </div>
-        <img src="img/undraw_team_work_k80m.svg">
+        <img src="img/undraw_Scrum_board_re_wk7v.svg" style="transform: scaleX(-1);">
+        <img src="img/forma.svg">
     </div>
 </body>
 
