--- a/inizia.html
+++ b/inizia.html
@@ -18,6 +18,7 @@
         <a class="bottone" href="iniziaStudenti.html">Studente</a>
         <a class="bottone" href="nuovoAzienda.php">Azienda</a>
     </div>
+    <img class="immagini-basso" src="img/undraw_Questions_re_1fy7.svg" alt="">
 </body>
 
 </html>
