fix grafici, aggiornamento del contatore dei tirocini

--- a/iniziaStudenti.html
+++ b/iniziaStudenti.html
@@ -14,9 +14,9 @@
         <div class="gooey-rec"></div>
     </header>
     <div class="contenuto-centrato" id="inizia">
-        <h2>Cosa devi fare?</h2>
-        <a class="bottone" href="nuovoStudente.php">Registra tirocinio</a>
-        <a class="bottone" href="nuovoRelazione.php">Aggiungi relazione</a>
+        <h2>Cosa vuoi fare?</h2>
+        <a class="bottone" href="nuovoStudente.php">Registrare un tirocinio</a>
+        <a class="bottone" href="nuovoRelazione.php">Scrivere una relazione</a>
     </div>
 </body>
 
