grafica + messaggi di errore + modalità scura

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <span id="logo1">Università<br>degli studi<br>di Udine</span>
+        <div class="gooey-rec"></div>
     </header>
     <div id="home">
         <div id="home-title">
@@ -17,9 +18,9 @@
             <a class="bottone" href="inizia.html">Inizia</a>
             <a href="scopri.php" style="margin-left: 20px;">Scopri</a>
         </div>
-        <img src="img/undraw_Scrum_board_re_wk7v.svg" style="transform: scaleX(-1);">
-        <img src="img/forma.svg">
+        <img src="img/undraw_Scrum_board_re_wk7v.svg" id="home-illustrazione">
     </div>
+
 </body>
 
 </html>
