--- a/inizia.html
+++ b/inizia.html
@@ -13,10 +13,12 @@
         <span id="logo2">Università<br>degli studi<br>di Udine</span>
         <div class="gooey-rec"></div>
     </header>
-    <div class="contenuto-centrato" id="inizia">
+    <div class="contenutoCentrato">
         <h2>Chi sei?</h2>
-        <a class="bottone" href="iniziaStudenti.html">Studente</a>
-        <a class="bottone" href="nuovoAzienda.php">Azienda</a>
+        <div class="contenutoCentratoBottoni">
+          <a class="bottone" href="iniziaStudenti.html">Studente</a>
+          <a class="bottone" href="nuovoAzienda.php">Azienda</a>
+        </div>
     </div>
 </body>
 
