--- a/iniziaStudenti.html
+++ b/iniziaStudenti.html
@@ -13,10 +13,12 @@
         <span id="logo2">Università<br>degli studi<br>di Udine</span>
         <div class="gooey-rec"></div>
     </header>
-    <div class="contenuto-centrato" id="inizia">
+    <div class="contenutoCentrato">
         <h2>Cosa vuoi fare?</h2>
-        <a class="bottone" href="nuovoStudente.php">Registrare un tirocinio</a>
-        <a class="bottone" href="nuovoRelazione.php">Scrivere una relazione</a>
+        <div class="contenutoCentratoBottoni">
+          <a class="bottone" href="nuovoStudente.php">Registrare un tirocinio</a>
+          <a class="bottone" href="nuovoRelazione.php">Scrivere una relazione</a>
+        </div>
     </div>
 </body>
 
