--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Portale dei tirocini d'azienda — Uniud</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -16,7 +18,7 @@
         <div id="home-title">
             <h1>Portale tirocini</h1>
             <a class="bottone" href="inizia.html">Inizia</a>
-            <a href="scopri.php" style="margin-left: 20px;">Scopri</a>
+            <a href="scopri.php" class="scopri">Scopri</a>
         </div>
         <img src="img/undraw_Scrum_board_re_wk7v.svg" id="home-illustrazione">
     </div>
