--- a/inizia.html
+++ b/inizia.html
@@ -5,6 +5,8 @@
     <title>Inizia</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -16,8 +18,8 @@
     <div class="contenutoCentrato">
         <h2>Chi sei?</h2>
         <div class="contenutoCentratoBottoni">
-          <a class="bottone" href="iniziaStudenti.html">Studente</a>
-          <a class="bottone" href="nuovoAzienda.php">Azienda</a>
+            <a class="bottone" href="iniziaStudenti.html">Studente</a>
+            <a class="bottone" href="nuovoAzienda.php">Azienda</a>
         </div>
     </div>
 </body>
