--- a/iniziaStudenti.html
+++ b/iniziaStudenti.html
@@ -5,6 +5,8 @@
     <title>Inizia</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -16,8 +18,8 @@
     <div class="contenutoCentrato">
         <h2>Cosa vuoi fare?</h2>
         <div class="contenutoCentratoBottoni">
-          <a class="bottone" href="nuovoStudente.php">Registrare un tirocinio</a>
-          <a class="bottone" href="nuovoRelazione.php">Scrivere una relazione</a>
+            <a class="bottone" href="nuovoStudente.php">Registrare un tirocinio</a>
+            <a class="bottone" href="nuovoRelazione.php">Scrivere una relazione</a>
         </div>
     </div>
 </body>
